<resources>
    <string name="app_name">Bubble Dice</string>
    <string name="text_values">Hi Mom</string>
    <string name="bubble_title"></string>
    <string name="bubble_toast">Bubble Created</string>

    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="d100">d100</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d2">d2</string>
    <string name="d3">d3</string>
    <string name="d4">d4</string>
    <string name="dF">dF</string>
    <string name="dn">dn</string>



</resources>