<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:forceDarkAllowed="true"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal50"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="343dp"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal56"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="319dp"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal65"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="319dp"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal68"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal84"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="319dp"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="1" />

    <TextView
        android:id="@+id/textScreen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey_700"
        android:gravity="center|end"
        android:textColor="@color/white_50"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal5" />


    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/d12"
        app:layout_constraintBottom_toTopOf="@+id/horizontal35"
        app:layout_constraintEnd_toStartOf="@+id/vertical25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal20" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/d20"
        app:layout_constraintBottom_toTopOf="@+id/horizontal35"
        app:layout_constraintEnd_toStartOf="@+id/vertical50"
        app:layout_constraintStart_toStartOf="@+id/vertical25"
        app:layout_constraintTop_toTopOf="@+id/horizontal20" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/d100"
        app:layout_constraintBottom_toTopOf="@+id/horizontal35"
        app:layout_constraintEnd_toStartOf="@+id/vertical75"
        app:layout_constraintStart_toStartOf="@+id/vertical50"
        app:layout_constraintTop_toTopOf="@+id/horizontal20" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="C"
        app:layout_constraintBottom_toTopOf="@+id/horizontal32"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical75"
        app:layout_constraintTop_toTopOf="@+id/horizontal20" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/d6"
        app:layout_constraintBottom_toTopOf="@+id/horizontal50"
        app:layout_constraintEnd_toStartOf="@+id/vertical25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal35" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/d8"
        app:layout_constraintBottom_toTopOf="@+id/horizontal50"
        app:layout_constraintEnd_toStartOf="@+id/vertical50"
        app:layout_constraintStart_toStartOf="@+id/vertical25"
        app:layout_constraintTop_toTopOf="@+id/horizontal35" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/d10"
        app:layout_constraintBottom_toTopOf="@+id/horizontal50"
        app:layout_constraintEnd_toStartOf="@+id/vertical75"
        app:layout_constraintStart_toStartOf="@+id/vertical50"
        app:layout_constraintTop_toTopOf="@+id/horizontal35" />

    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/horizontal44"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical75"
        app:layout_constraintTop_toTopOf="@+id/horizontal32" />

    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/d2"
        app:layout_constraintBottom_toTopOf="@+id/horizontal65"
        app:layout_constraintEnd_toStartOf="@+id/vertical25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal50" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/d3"
        app:layout_constraintBottom_toTopOf="@+id/horizontal65"
        app:layout_constraintEnd_toStartOf="@+id/vertical50"
        app:layout_constraintStart_toStartOf="@+id/vertical25"
        app:layout_constraintTop_toTopOf="@+id/horizontal50" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/d4"
        app:layout_constraintBottom_toTopOf="@+id/horizontal65"
        app:layout_constraintEnd_toStartOf="@+id/vertical75"
        app:layout_constraintStart_toStartOf="@+id/vertical50"
        app:layout_constraintTop_toTopOf="@+id/horizontal50" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="-"
        app:layout_constraintBottom_toTopOf="@+id/horizontal56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical75"
        app:layout_constraintTop_toTopOf="@+id/horizontal44" />

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/dF"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal80"
        app:layout_constraintEnd_toStartOf="@+id/vertical25"
        app:layout_constraintStart_toStartOf="@+id/vertical0"
        app:layout_constraintTop_toTopOf="@+id/horizontal65" />

    <Space
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="@string/dn"
        app:layout_constraintBottom_toBottomOf="@id/horizontal80"
        app:layout_constraintEnd_toStartOf="@+id/vertical50"
        app:layout_constraintStart_toStartOf="@+id/vertical25"
        app:layout_constraintTop_toTopOf="@+id/horizontal65" />

    <Space
        android:id="@+id/button15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="nothing"
        app:layout_constraintBottom_toBottomOf="@id/horizontal80"
        app:layout_constraintEnd_toStartOf="@+id/vertical75"
        app:layout_constraintStart_toStartOf="@+id/vertical50"
        app:layout_constraintTop_toTopOf="@+id/horizontal65" />

    <Button
        android:id="@+id/button16"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="*"
        app:layout_constraintBottom_toTopOf="@+id/horizontal68"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical75"
        app:layout_constraintTop_toTopOf="@+id/horizontal56" />

    <Button
        android:id="@+id/button17"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hapticFeedbackEnabled="true"
        android:text="/"
        app:layout_constraintBottom_toBottomOf="@id/horizontal80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical75"
        app:layout_constraintTop_toTopOf="@+id/horizontal68" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="411dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/grey_700"
            app:fabAlignmentMode="center"
            app:fabCradleMargin="8dp"
            app:fabCradleVerticalOffset="0dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:scaleType="center"
            android:src="@drawable/ic_image_die_holo_dark"
            app:fabSize="normal"
            app:layout_anchor="@id/bottomAppBar" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>